# steinbockKalender

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: main.rs
