[package]
name = "steinbockschraubtermine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
table-extract = "0.2.3"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
ics = "0.5.8"
rocket = "0.5.0"