[package]
name = "steinbockschraubtermine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
table-extract = "0.2.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
ics = "0.5.8"
rocket = "0.5.0"
anyhow = "1.0.82"
log = "0.4.25"
shuttle = { version = "0.8.0",optional = true }
shuttle-rocket = { version= "0.49.0", optional = true }
shuttle-runtime = { version= "0.52.0", optional = true }

[features]
default = ["shuttle"]
shuttle = ["dep:shuttle", "dep:shuttle-rocket", "dep:shuttle-runtime"]